# myself

./: .gitattributes  README.md  game.py  start.py  start_main_1.py  start_main_2.py
1/: 2
Algorithm Learning/: L1-Cure.ipynb  L1-Virus.ipynb  L2-Lcm.ipynb  L2-MCD.ipynb  L2-Mcd.ipynb  L2-Prime.ipynb  L3-EditBinaryTree.ipynb  L3-Stack.ipynb  Markdown.ipynb  Pow(x,n).ipynb  README.md  七大检索算法.ipynb  两数之和&四数之和.ipynb  两数相加-链表.ipynb  二值图像处理.ipynb  二叉树.ipynb  代码调试.ipynb  全排列序列.ipynb  六大排序算法.ipynb  删除链表的倒数第 N 个结点.ipynb  反转链表.ipynb  四数之和.ipynb  寻找两个正序数组的中位数.ipynb  总和数组.cpp  无重复字符的最长子串.ipynb  最长回文子串.ipynb  有效数独.cpp  杨辉三角(动态规划).ipynb  构建链表.ipynb  正则表达式匹配.ipynb  爬楼梯.ipynb  算法复杂度（时间，空间）.ipynb  魔法指令与代码运行时间.ipynb
C++/: README.md
C++/Cmake/课程七讲_源码/Example_WorkerManageSystem/: CMakeLists.txt  EmployeeSystem.cpp
C++/Cmake/课程七讲_源码/Example_WorkerManageSystem/include/: CBoss.h  CCtrlSystem.h  CEmployee.h  CManager.h  CWorker.h
C++/Cmake/课程七讲_源码/Example_WorkerManageSystem/src/: CBoss.cpp  CCtrlSystem.cpp  CEmployee.cpp  CManager.cpp  CWorker.cpp
ECV2023/: README.md
ROS/: README.md
exe_1/: README.md  README1.md  game.py  start.py  start_main_1.py  start_main_2.py
man&woman_voice_shibie/: README.md  UI.m  cut.m  luru.m  shibie.m
opencv/: README.md
paddle项目/: 划分数据集.py  基于PaddleDetection的绝缘子的缺陷检测.ipynb  模型训练和关键参数调优和可视化.ipynb  项目ID.xlsx
paper read/: transformer
pytorch-每节练习-动手学深度学习2（李沐）/: GPU运算.ipynb  bert-dataset.ipynb  bert-pretraining.ipynb  bert.ipynb  优化算法-adam(算法latex).ipynb  优化算法-lr scheduler（余弦退火）.ipynb  单机多GPU-数据并行分布运算.ipynb  单机多GPU的简洁实现.ipynb  卷积神经网络-lenet.ipynb  (+70 more)
(+349 files in other folders)
